--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -61,7 +61,9 @@ discussed below{\large,} along with their shortcomings.
   Moreover, none of them are complete and most lack many practical parts of \progLang{Prolog}.
 
 \item
-  In the case of libraries, a few exist,\eref{comma-splice} most are old and are not currently maintained or updated.
+  In the case of libraries, a few exist,\endnote{%
+    comma splice.
+}\elabel{comma-splice} most are old and are not currently maintained or updated.
   Many provide only a shell through which one has to
   do\eref{must-have-to} all the work, which is synonymous with the
   embeddings mentioned above.
