--- a/background.tex
+++ b/background.tex
@@ -17,8 +17,7 @@
 Programming languages fall into different categories also known as ``paradigms''.
 They exhibit different characteristics according to the paradigm they fall into.
 It has been argued \cite{Krishnamurthi:2008:TPL:1480828.1480846} that
-rather than classifying a language into a particular paradigm
-,
+rather than classifying a language into a particular paradigm,
 it is
 more accurate that a language exhibits a set of characteristics from a
 number of paradigms.
