Added a \macroName command to help write \endnotes.

--- a/thesis-solanki.tex
+++ b/thesis-solanki.tex
@@ -78,6 +78,7 @@
 \newcommand\firstOfTwo[2]{#1}
 \newcommand\secondOfTwo[2]{#2}
 \newcommand{\enparen}[1]{\textup{\firstOfTwo()}#1\textup{\secondOfTwo()}}
+\newcommand{\macroName}[1]{\texttt{\char`\\#1}}
 
 % This is needed to include figures
 % \usepackage{graphicx}
