Added a \macroName command and applied to clean up \endnotes in proposedWork.tex

--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -94,9 +94,7 @@ crossover implementations exist but again most of them have faded out.\endnote{%
 }
 
 As discussed in the sections above,\endnote{%
-  Which sections above?  Use {\ttfamily\expandafter\string\csname label\endcsname}
-  and
-  {\ttfamily\expandafter\string\csname ref\endcsname}
+  Which sections above?  Use \macroName{label} and \macroName{ref}
   to say precisely which.
 }
 either an embedding or an integration approach is taken up for programming
@@ -118,7 +116,7 @@ Taking into consideration above, there is quite some room for improvement and ad
 Moving onto what this thesis shall explore, first thing's first a complete, fully functional library which comes
 close to a \progLang{Prolog} like\eref{language-like} language and has practical abilities to carry out real-world tasks.
 They include predicates like\eref{such-as-like} \unknownLabel{cut}\endnote{%
-  Write macros like {\ttfamily\string\progLang} for the various classes
+  Write macros like \macroName{progLang} for the various classes
   of special symbols in your thesis, and then apply them to words like
   ``fail'', which when used as a \progLang{Prolog} word, should be
   typeset as \texttt{\char`\\prologCode\char`\{fail\char`\}}, or some such.
