--- a/introduction.tex
+++ b/introduction.tex
@@ -187,7 +187,10 @@ This can be achieved in two ways:
   as all the positives as well as the negatives are brought into the host language.
   The negatives mentioned being, that languages from different paradigms usually have conflicting characteristics
   and result in inconsistent properties of the resulting embedding.
-  Examples and further discussion on the same is provided in the chapters to come.
+  Examples and further discussion on the same \yyy{is}{are}\endnote{%
+      The word ``Examples'' is plural.
+}
+    provided in the chapters to come.
 
 \item [Paradigm Integration (\chapterReference{chap:multiparadigm}{Chapter 5}):]
 
