--- a/metasyntacticvariables.tex
+++ b/metasyntacticvariables.tex
@@ -34,7 +34,7 @@ A name used in examples and understood to stand for whatever thing is under disc
   Em-dashes (u\(+\)x2014)---used to separate thoughts inside sentences---are typed as three minus signs.
 
   En-dashes (u\(+\)x2013), used to separate numbers, for instance 3--5, are typed as two minus signs.
-}\elabel{end:non-ascii}
+}\elabel{non-ascii}
 or other words like it as permanent names for anything. In filenames, a common convention is that any filename beginning with a metasyntactic-variable name is a scratch file that may be deleted at any time.
 
 Metasyntactic variables are so called because they are variables in the metalanguage used to talk about programs
